--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -3,48 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Easy Car Rental</title>
-  <link href="assets/img/logo.png" rel="icon">
+    <link href="assets/img/logo.png" rel="icon">
 
-  <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
-  <meta content="This is Car Rental Web site." name="description">
-  <meta content="Nimesha Madubashini" name="author">
-  <meta content="Nimesha Madubashini" name="owner">
-  <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
-  <meta content="yellow" name="theme-color">
+    <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
+    <meta content="This is Car Rental Web site." name="description">
+    <meta content="Nimesha Madubashini" name="author">
+    <meta content="Nimesha Madubashini" name="owner">
+    <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
+    <meta content="yellow" name="theme-color">
 
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+          rel="stylesheet">
 
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/Style.css">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/Style.css">
+    <link rel="stylesheet" href="assets/frontAwsome/fontawesome-free-6.4.0-web/css/all.css">
 </head>
 <body>
-<header class="header">
-  <nav class="navbar navbar-expand-lg  w-100" data-bs-theme="light" >
-    <div class="container-fluid">
-      <a class="logo" href="#"><img src="assets/img/promoting.png"></a>
-      <div class="navbar1">
-        <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Cars</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Register</a></li>
-      </ul>
-      </div>
+<header class="header fixed-top d-flex align-items-center shadow-sm p-1 mb-5 bg-body-tertiary rounded">
+    <nav class="navbar navbar-expand-lg  w-100 " data-bs-theme="light ">
+        <div class="container-fluid">
+            <a class="logo pl-5" href="#"><img src="assets/img/promoting.png"></a>
+            <h3 class="position-relative " id="headrH3"><span>Easy Car</span> Rental</h3>
+            <div class="navbar1 align-items-center">
+                <ul class="align-items-center m-2 font-weight-bolder">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Cars</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Register</a></li>
+                </ul>
+            </div>
 
-      <div>
-        <button type="button" class="btn btn-primary">SignIn</button>
+            <div style="padding-right: 65px">
+                <button type="button" class="btn btn-primary shadow-sm rounded-4" id="signin">Sign In
+                    <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                </button>
+            </div>
+        </div>
 
-      </div>
-    </div>
-
-  </nav>
+    </nav>
 
 </header>
+<section id="home">
+    <div class="container">
+        <div class="col-6 position-relative pt-5" id="homeTitle">
+            <div class="row position-relative">
+                <h1 class="position-relative" id="hometitle1">Looking to</h1>
+            </div>
+            <div class="row">
+                <h1 class="position-relative" id="homeTitel2">rent a car</h1>
+            </div>
+            <div class="row">
+                <p class="position-relative " id="homeTitel3">Welcome to our Easy Car Rental Hub! Discover a world of
+                    convenience and choice with our user-friendly website.
+                    Browse, compare, and book from our diverse fleet of vehicles, all at your fingertips.
+                    Experience hassle-free rentals, competitive prices, and excellent customer service. Start your
+                    journey here</p>
+            </div>
+            <div class="row ">
+                <div class="col-6 position-relative " id="homeimg1" >
+<img src="assets/img/web/ios.png" width="150px">
+                </div>
+                <div class="col-6 position-relative" id="homeimg2" ">
+<img src="assets/img/web/512x512.png " width="150px" >
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="about" class="position-relative w-100 h-100 border bg-light">
+    <div class="row">
+        <div class="col-6">
+            <p>
+                lkgjerkkkkkkkkkkkkgkjrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrngfmngmfngmfgierjhgnkjfgb
+            </p>
+
+        </div>
+        <div class="col-6">
+            <p>dffffffffffffffffffffffd</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
