--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -66,26 +66,84 @@
                     journey here</p>
             </div>
             <div class="row ">
-                <div class="col-6 position-relative " id="homeimg1" >
-<img src="assets/img/web/ios.png" width="150px">
+                <div class="col-6 position-relative " id="homeimg1">
+                    <img src="assets/img/web/ios.png" width="150px">
                 </div>
-                <div class="col-6 position-relative" id="homeimg2" ">
-<img src="assets/img/web/512x512.png " width="150px" >
+                <div class="col-6 position-relative" id="homeimg2">
+                    <img src="assets/img/web/512x512.png " width="150px">
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<!--Rides-->
+<section id="ride" class="position-relative w-100 h-100 border bg-light">
+    <div class="text-center justify-content-center mt-4 ">
+        <span >How Its Work</span>
+        <h1>Rent With 3 Easy Steps
+        </h1>
+    </div>
+    <div class="container">
+        <div class="row ">
+            <div class="col-4 ">
+                <div id="rideUser"  class="position-relative rounded shadow-sm d-flex justify-content-center
+                align-items-center text-center " style="background: #ececf6 ; left:150px">
+                    <i class="fa-solid fa-user-check fa-2xl d-flex align-items-center justify-content-center text-center" style="color: #fb9541;"></i>
+                </div>
+                <div class="mt-2">
+                    <span  class="font-weight-bold text-center mt-2 " style="padding-left: 100px">User Authentication</span>
+                    <p class=" text-center mt-2 ">
+                        Users can log into the system using their username and password to access their accounts securely.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-4 ">
+                <div id="rideUser"  class="position-relative rounded shadow-sm d-flex justify-content-center
+                align-items-center text-center " style="background: #ececf6 ; left:150px">
+                    <i class="fa-solid fa-user-check fa-2xl d-flex align-items-center justify-content-center text-center" style="color: #fb9541;"></i>
+                </div>
+                <div class="mt-2">
+                    <span  class="font-weight-bold text-center mt-2 " style="padding-left: 100px">User Authentication</span>
+                    <p class=" text-center mt-2 ">
+                        Users can log into the system using their username and password to access their accounts securely.
+                    </p>
+                </div>
+            </div>
+            <div class="col-4 ">
+                <div id="rideUser"  class="position-relative rounded shadow-sm d-flex justify-content-center
+                align-items-center text-center " style="background: #ececf6 ; left:150px">
+                    <i class="fa-solid fa-user-check fa-2xl d-flex align-items-center justify-content-center text-center" style="color: #fb9541;"></i>
+                </div>
+                <div class="mt-2">
+                    <span  class="font-weight-bold text-center mt-2 " style="padding-left: 100px">User Authentication</span>
+                    <p class=" text-center mt-2 ">
+                        Users can log into the system using their username and password to access their accounts securely.
+                    </p>
+                </div>
+            </div>
+
+            </div>
+
+        </div>
+
+    </div>
+</section>
+<!--About us-->
+
+
+
 <section id="about" class="position-relative w-100 h-100 border bg-light">
     <div class="row">
-        <div class="col-6">
-            <p>
-                lkgjerkkkkkkkkkkkkgkjrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrngfmngmfngmfgierjhgnkjfgb
-            </p>
+        <div class="col-12 d-flex align-items-center justify-content-center text-center">
+            <span >ABOUT US</span>
+            <h1 >Best Customer Experience</h1>
 
         </div>
         <div class="col-6">
-            <p>dffffffffffffffffffffffd</p>
+        </div>
+        <div class="col-6">
         </div>
     </div>
 </section>
