--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -51,9 +51,11 @@
             </div>
 
             <div style="padding-right: 65px">
+         <a href="pages/loginform.html">
                 <button type="button" class="btn btn-primary shadow-sm rounded-4" id="signin">Sign In
                     <i class="fa-solid fa-arrow-right-to-bracket"></i>
                 </button>
+                </a>
             </div>
         </div>
 
