--- a/Front_End/pages/loginform.html
+++ b/Front_End/pages/loginform.html
@@ -2,9 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Easy Car Rental</title>
+  <link href="../assets/img/logo.png" rel="icon">
+
+  <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
+  <meta content="This is Car Rental Web site." name="description">
+  <meta content="Nimesha Madubashini" name="author">
+  <meta content="Nimesha Madubashini" name="owner">
+  <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
+  <meta content="yellow" name="theme-color">
+
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/frontAwsome/fontawesome-free-6.4.0-web/css/all.css">
 </head>
 <body>
-$END$
+<section class="vh-100" style="background-color:#c5d7f2;">
+  <div class="container py-5 h-75 mb-2">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem; height: 89vh;width: 835px">
+          <div class="row g-0" style="height: 77vh">
+            <div class="col-md-6 col-lg-5 d-none d-md-block" style="height: 86vh">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
+                   alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+            </div>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center" style="height: 85vh">
+              <div class="card-body p-4 p-lg-5 text-black" style="height: 97vh">
+
+                <form class="position-relative" style="margin-bottom: 10px">
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">Welcome</span>
+                  </div>
+
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                  <div class="form-group">
+                    <select class="form-control" id="role_Type" name="role_Type" style="border-radius: 20px;height: 3.5em">
+                      <option value="RoleType">Choose Role</option>
+                      <option value="ADMIN">ADMIN</option>
+                      <option value="REGISTERED_USER">REGISTERED_USER</option>
+                      <option value="DRIVER">DRIVER</option>
+                    </select>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <input type="text"  class="form-control form-control-lg"
+                           id="user_Name"   placeholder="Enter Your Username" />
+                    <label class="form-label" for="user_Name">Username</label>
+                  </div>
+
+                  <div class="form-outline mb-3">
+                    <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter Your Password"/>
+                    <label class="form-label" for="password">Password</label>
+                  </div>
+
+                  <div class="pt-1 mb-3">
+                    <button class="btn  btn-lg btn-block" style="background-color: #0d6efd; color: white" type="button">Login</button>
+                  </div>
+
+                  <a class="small text-muted" href="#!">Forgot password?</a>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="#!"
+                                                                                            style="color: #393f81;">Register here</a></p>
+                <!--  <a href="#!" class="small text-muted">Terms of use.</a>
+                  <a href="#!" class="small text-muted">Privacy policy</a>-->
+                </form>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 </html>
