--- a/Front_End/pages/reg_UserDashBoard.html
+++ b/Front_End/pages/reg_UserDashBoard.html
@@ -183,7 +183,7 @@
             <form>
               <div class="col col-lg-12 col-sm-8" >
 
-                <input class="form-control position-relative " id="responseRentId" readonly
+                <input class=" position-relative " id="responseRentId" readonly
                        name="rent_Id"
                        placeholder="Enter Rent ID" type="text" style="top: 25px ; right: 245px">
               </div>
@@ -269,7 +269,8 @@
           </div>
         </div>
 
-        <div class="card info-card" >
+        <div class="card info-card"  style="margin-top: 42px;     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+;background-color: #F5F5E6">
           <div class="row">
             <div class="col-lg-12">
               <div class="row">
@@ -295,8 +296,8 @@
 
                   </div>
                 </div>
-                <div class="col-lg-6 p-2">
-                  <div class="row mt-1 m-2 p-1">
+                <div class="col-lg-6 p-2" style="width: 567px">
+                  <div class="row mt-1 m-2 p-1" >
                     <div class="col-12 col-md-6 col-lg-6">
                       <label class="fw-bold" for="car_Id">Car ID :</label>
                       <select aria-label="Default select example" class="form-select border-dark"
@@ -363,7 +364,13 @@
           </div>
         </div>
       </div>
-      <div class="card info-card" id="card3">
+      <div class="card info-card" id="card3" style="
+    height: 351px;
+    width: 942px;
+    background-color: #DBE8FA;
+    margin-left: 8px;
+    margin-top: 50px;
+">
         <!-- View Customer Details Table Start -->
         <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
           <div class="col-11 justify-content-around sectionBorder"
@@ -512,7 +519,8 @@
           </div>
           <!-- end card-body -->
         </div>
-        <div class="card info-card">
+        <div class="card info-card" style="background-color: #F5F5E6;    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+">
           <div class=" row col-12 mb-3 m-2 p-2 d-flex">
             <div class=" col-md-5 col-lg-5 col-sm-5 xs-5 img-fluid m-3 p-3"
                  style="border: 2px solid black; height: 400px; " id="photoImg1"></div>
