--- a/Front_End/pages/reg_UserDashBoard.html
+++ b/Front_End/pages/reg_UserDashBoard.html
@@ -234,7 +234,7 @@
         <div class="card info-card" id="card">
           <div class="col col-lg-12">
             <div class="row col-12 m-2 p-2  justify-content-lg-center">
-              <di class="row col-lg-6 gap-3 gap-lg-0 col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
+              <div class="row col-lg-6 gap-3 gap-lg-0 col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
                 <div class="col-lg-6">
                   <label class="form-label" style="color:blue" for="rent_Id">Rent Id</label>
                   <input type="text" name="rent_Id" class="form-control" id="rent_Id"
@@ -245,7 +245,7 @@
                   <input type="text" name="user_Id" class="form-control" id="user_Id"
                          readonly placeholder="C00-001">
                 </div>
-              </di>
+              </div>
               <div class="row col-lg-6 gap-3 gap-lg-0 d-flex col-md-5 col-sm-6 col-xs-3 justify-content-md-around">
                 <div class="col-lg-6">
                   <label class="form-label" style="color: blue" for="category_type">Category</label>
@@ -561,12 +561,6 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../assets/js/dashboardMain.js"></script>
 
-<!-- Controller JS File -->
-<script src="../controller/regUserDashboardController.js"></script>
-
-<!-- Util JS File -->
-<script src="../util/alert.js" rel="script"></script>
-<script src="../util/validation.js" rel="script"></script>
 
 <script>
   $(document).ready(function () {
