--- a/Front_End/pages/reg_UserDashBoard.html
+++ b/Front_End/pages/reg_UserDashBoard.html
@@ -3,17 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>User Dashboard</title>
+  <title>Admin Dashboard</title>
   <link href="../assets/img/logo.png" rel="icon">
 
   <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
-  <meta content="This is Car Rental Web Project." name="description">
+  <meta content="This is Car Rental Web site." name="description">
   <meta content="Nimesha Madubashini" name="author">
   <meta content="Nimesha Madubashini" name="owner">
   <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
-  <meta content="green" name="theme-color">
+  <meta content="yellow" name="theme-color">
   <link rel="stylesheet" href="../assets/frontAwsome/fontawesome-free-6.4.0-web/css/all.css">
-
+  <!--purple-->
+  <link rel="stylesheet" href="../assets/vendor/mdi/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="../assets/vendor/css/vendor.bundle.base.css">
+  <!-- endinject -->
+  <!-- Plugin css for this page -->
+  <!-- End plugin css for this page -->
+  <!-- inject:css -->
+  <!-- endinject -->
+  <!-- Layout styles -->
+  <link rel="stylesheet" href="../assets/vendor/style.css">
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -25,90 +34,65 @@
   <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-
   <!-- Template Dashboard CSS File -->
   <link href="../assets/css/dashboardStyle.css" rel="stylesheet">
 
 </head>
 <body>
 <!-- ======= Header ======= -->
-<header id="header" class="header fixed-top d-flex align-items-center">
+<header id="header" class="header fixed-top d-flex align-items-center bg-light">
 
-  <div class="d-flex align-items-center justify-content-between">
-    <a href="reg_UserDashBoard.html" class="logo d-flex align-items-center">
-      <span style="font-family: cursive;    color:#0c5460;" class="d-none d-lg-block">Easy <span style="color:orange;font-family: cursive">Car Rent.</span></span>
-    </a>
-    <i class="bi bi-list toggle-sidebar-btn"></i>
-  </div><!-- End Logo -->
+  <!-- partial:partials/_navbar.html -->
+  <nav style="height: 60px;" class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+    <div  class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center" style="width: 301px;height: 30px">
+      <a href="driverDashBoard.html" class="logo d-flex align-items-center">
+        <span style="font-family: cursive;    color:#0c5460;" class="d-none d-lg-block">Easy <span style="color:orange;font-family: cursive">Car Rent.</span></span>
+      </a>
+      <i class="bi bi-list toggle-sidebar-btn"></i>
+    </div>
+    <div class="navbar-menu-wrapper d-flex align-items-stretch" style="width: 600px">
 
-  <nav class="header-nav ms-auto">
-    <ul class="d-flex align-items-center">
+      <ul class="navbar-nav navbar-nav-right">
+        <li class="nav-item nav-profile dropdown">
+          <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="nav-profile-img">
+              <img src="../assets/img/face2.jpg" alt="image">
+              <span class="availability-status online"></span>
+            </div>
+            <div class="nav-profile-text">
+              <p class="mb-1 text-black">Elsa Dev</p>
+            </div>
+          </a>
+          <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
+            <a class="dropdown-item" href="#">
+              <i class="mdi mdi-cached me-2 text-success"></i> Activity Log </a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">
+              <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
+          </div>
+        </li>
+        <li class="nav-item d-none d-lg-block full-screen-link">
+          <a class="nav-link">
+            <i class="mdi mdi-fullscreen" id="fullscreen-button"></i>
+          </a>
+        </li>
 
-      <li class="nav-item d-block d-lg-none">
-        <a class="nav-link nav-icon search-bar-toggle " href="#">
-          <i class="bi bi-search"></i>
-        </a>
-      </li><!-- End Search Icon-->
-
-      <li class="nav-item dropdown pe-3">
-
-        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-          <img src="../assets/img/AdminImg.jpg" alt="Profile" class="rounded-circle">
-          <span class="d-none d-md-block dropdown-toggle ps-2">K.L Elina</span>
-        </a><!-- End Profile Iamge Icon -->
-
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-          <li class="dropdown-header">
-            <h6>K.L Elina</h6>
-            <span>User</span>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" id="userDetailss">
-              <i class="bi bi-person"></i>
-              <span>My Profile</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" id="userDetails">
-              <i class="bi bi-gear"></i>
-              <span>Account Settings</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="">
-              <i class="bi bi-question-circle"></i>
-              <span>Need Help?</span>
-            </a>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-
-          <li>
-            <a class="dropdown-item d-flex align-items-center" href="loginform.html">
-              <i class="bi bi-box-arrow-right"></i>
-              <span>Sign Out</span>
-            </a>
-          </li>
-
-        </ul><!-- End Profile Dropdown Items -->
-      </li><!-- End Profile Nav -->
-
-    </ul>
-  </nav><!-- End Icons Navigation -->
+        <li class="nav-item nav-logout d-none d-lg-block">
+          <a class="nav-link" href="#">
+            <i class="mdi mdi-power"></i>
+          </a>
+        </li>
+        <li class="nav-item nav-settings d-none d-lg-block">
+          <a class="nav-link" href="#">
+            <i class="mdi mdi-format-line-spacing"></i>
+          </a>
+        </li>
+      </ul>
+      <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+        <span class="mdi mdi-menu"></span>
+      </button>
+    </div>
+  </nav>
 
 </header>
 <!-- End Header -->
