--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -75,7 +75,8 @@
                 <p class="position-relative " id="homeTitel3">Welcome to our Easy Car Rental Hub! Discover a world of
                     convenience and choice with our user-friendly website.
                     Browse, compare, and book from our diverse fleet of vehicles, all at your fingertips.
-                    Experience hassle-free rentals, competitive prices, and excellent customer service. Start your
+                    Experience hassle-free rentals, competitive prices, and excellent customer
+                    com.easy.car_Rent.advisor.service. Start your
                     journey here</p>
             </div>
             <div class="row ">
