--- a/Front_End/pages/adminPages/Reg_UserDetail.html
+++ b/Front_End/pages/adminPages/Reg_UserDetail.html
@@ -36,6 +36,7 @@
 
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
+    <script src="../../Controller/Reg_UserController.js"></script>
 
 </head>
 <body>
@@ -462,6 +463,8 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
 
+<script src="../../Controller/Reg_UserController.js"></script>
+<script src="../../util/validation.js"></script>
 
 </body>
 </html>
