--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -571,5 +571,7 @@
 
 <!-- Template Javascript -->
 <script src="assets/js/main.js"></script>
+<script src="Controller/Reg_UserController.js"></script>
+
 </body>
 </html>
