--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -568,10 +568,14 @@
 <script src="assets/vendor/lib/tempusdominus/js/moment.min.js"></script>
 <script src="assets/vendor/lib/tempusdominus/js/moment-timezone.min.js"></script>
 <script src="assets/vendor/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
 
 <!-- Template Javascript -->
 <script src="assets/js/main.js"></script>
 <script src="Controller/Reg_UserController.js"></script>
+
+<script rel="script" src="util/validation.js"></script>
+<script src="util/alert.js"></script>
 
 </body>
 </html>
