update registerUser frontend js and backend

--- a/Front_End/pages/driverDashBoard.html
+++ b/Front_End/pages/driverDashBoard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Admin Dashboard</title>
+    <title>Driver Dashboard</title>
     <link href="../assets/img/logo.png" rel="icon">
 
     <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
