--- a/Front_End/pages/loginform.html
+++ b/Front_End/pages/loginform.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Easy Car Rental</title>
+  <title>Easy Car Rental login</title>
   <link href="../assets/img/logo.png" rel="icon">
 
   <meta content="Easy Car Rental, Car rental,Vehicle Rental" name="keywords">
