--- a/Front_End/pages/adminPages/Reg_UserDetail.html
+++ b/Front_End/pages/adminPages/Reg_UserDetail.html
@@ -36,7 +36,7 @@
 
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
-    <script src="../../Controller/Reg_UserController.js"></script>
+
 
 </head>
 <body>
@@ -465,6 +465,6 @@
 
 <script src="../../Controller/Reg_UserController.js"></script>
 <script src="../../util/validation.js"></script>
-
+<script src="../../util/alert.js"></script>
 </body>
 </html>
