--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="assets/vendor/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="assets/css/style1.css">
     <link rel="stylesheet" href="assets/boostrap/bootstrap.min.css">
+    <link href="assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+
 
     <!---->
 </head>
@@ -243,7 +245,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-10"  style="margin-top: 16px">
                             <label class="form-label" for="user_Id">User Id</label>
-                            <input style="border-radius:12px;" class="form-control " id="user_Id" name="user_Id" placeholder="C00-001" readonly
+                            <input style="border-radius:12px;" class="form-control " id="user_Id" name="user_Id" readonly
                                    type="text">
                             <span class="control-error"></span>
 
@@ -259,7 +261,7 @@
                             <label class="form-label" for="lastName">Last Name</label>
                             <input style="border-radius:12px;" class="form-control" id="lastName" name="lastName" placeholder="Last Name"
                                    type="text">
-                            <span class="control-error"></span>
+                            <span  class="control-error"></span>
                         </div>
                         <div class="col-lg-5 col-md-8"  style="margin-top: 16px;margin-left: 35px">
                             <label class="form-label" for="contact_No">Contact Number</label>
@@ -484,7 +486,7 @@
 
 
 <!-- Footer Start -->
-<footer class="position-relative" style="bottom: 289px">
+<footer class="position-relative" style="bottom: 289px"1>
     <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
@@ -569,6 +571,7 @@
 <script src="assets/vendor/lib/tempusdominus/js/moment-timezone.min.js"></script>
 <script src="assets/vendor/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 <script src="assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
+<script rel="script" src="assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
 <!-- Template Javascript -->
 <script src="assets/js/main.js"></script>
