update driver js and backend

--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -307,7 +307,7 @@
                                 <section id="sec1Driver" class="col-md-4 mt-3">
                                     <div class="mb-sm-0 col-md-11">
                                         <label class="form-label" for="user_Id">Driver Id</label>
-                                        <input class="form-control" id="user_Id" readonly type="text" name="user_Id" placeholder="DRI-001">
+                                        <input class="form-control" id="user_Id" readonly type="text" name="user_Id" placeholder="DRI-001" >
                                         <span class="control-error"></span>
                                     </div>
                                     <div class="mb-sm-0 mt-3 col-md-11">
@@ -452,6 +452,9 @@
 
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
+<script src="../../Controller/DriverController.js"></script>
+<script src="../../util/alert.js"></script>
+<script src="../../util/validation.js"></script>
 
 </body>
 </html>
