--- a/Front_End/pages/AdminDashBoard.html
+++ b/Front_End/pages/AdminDashBoard.html
@@ -634,7 +634,7 @@ Acept C00-010 Customer Rent Request
 <!-- Template Dashboard Main JS File -->
 <script src="../assets/js/dashboardMain.js"></script>
 
-
+<script src="../Controller/DashBoardController.js"></script>
 
 </body>
 </html>
