--- a/Front_End/pages/adminPages/CarManage.html
+++ b/Front_End/pages/adminPages/CarManage.html
@@ -480,7 +480,10 @@
 
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
+
 <script src="../../Controller/CarController.js"></script>
+<script src="../../Controller/DashBoardController.js"></script>
+
 <script src="../../util/alert.js"></script>
 <script src="../../util/validation.js"></script>
 
