--- a/Front_End/pages/adminPages/CustomerRequest.html
+++ b/Front_End/pages/adminPages/CustomerRequest.html
@@ -245,7 +245,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../adminPages/RentManage.html">
+                    <a href="./RentManage.html">
                         <i style="background-color: white" class="bi bi-circle"></i><span style="color: white">Rent Details</span>
                     </a>
                 </li>
@@ -540,6 +540,10 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
 
+<script src="../../Controller/DashBoardController.js"></script>
+<script src="../../Controller/RentController.js"></script>
 
+<script src="../../util/alert.js"></script>
+<script src="../../util/validation.js"></script>
 </body>
 </html>
