--- a/Front_End/pages/adminPages/DriverManage.html
+++ b/Front_End/pages/adminPages/DriverManage.html
@@ -453,6 +453,8 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
 <script src="../../Controller/DriverController.js"></script>
+<script src="../../Controller/DashBoardController.js"></script>
+
 <script src="../../util/alert.js"></script>
 <script src="../../util/validation.js"></script>
 
