--- a/Front_End/pages/adminPages/IncomeDetail.html
+++ b/Front_End/pages/adminPages/IncomeDetail.html
@@ -447,6 +447,10 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
 
+<script src="../../Controller/DashBoardController.js"></script>
+<script src="../../Controller/IncomeReportController.js"></script>
 
+<script src="../../util/alert.js"></script>
+<script src="../../util/validation.js"></script>
 </body>
 </html>
