--- a/Front_End/pages/adminPages/PaymentDetail.html
+++ b/Front_End/pages/adminPages/PaymentDetail.html
@@ -37,6 +37,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -367,7 +368,10 @@
 
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
+<script src="../../Controller/RentController.js"></script>
+<script src="../../Controller/DashBoardController.js"></script>
 
-
+<script src="../../util/alert.js"></script>
+<script src="../../util/validation.js"></script>
 </body>
 </html>
