--- a/Front_End/pages/adminPages/Reg_UserDetail.html
+++ b/Front_End/pages/adminPages/Reg_UserDetail.html
@@ -462,7 +462,7 @@
 
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
-
+<script src="../../Controller/DashBoardController.js"></script>
 <script src="../../Controller/Reg_UserController.js"></script>
 <script src="../../util/validation.js"></script>
 <script src="../../util/alert.js"></script>
