--- a/Front_End/pages/adminPages/RentManage.html
+++ b/Front_End/pages/adminPages/RentManage.html
@@ -215,17 +215,17 @@
             </a>
             <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav" >
                 <li>
-                    <a href="adminPages/Reg_UserManage.html">
+                    <a href="Reg_UserDetail.html">
                         <i  style="color:white;" class="bi bi-circle"></i><span style="color:white;"  >Customer</span>
                     </a>
                 </li>
                 <li>
-                    <a href="adminPages/DriverManage.html">
+                    <a href="DriverManage.html">
                         <i  style="color:white;" class="bi bi-circle"></i><span style="color:white;">Driver</span>
                     </a>
                 </li>
                 <li>
-                    <a href="adminPages/CarManage.html">
+                    <a href="CarManage.html">
                         <i  style="color:white;" class="bi bi-circle"></i><span style="color:white;">Car</span>
                     </a>
                 </li>
@@ -240,12 +240,12 @@
             </a>
             <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="adminPages/PaymentDetails.html">
+                    <a href="./PaymentDetail.html">
                         <i style="background-color: white" class="bi bi-circle"></i><span style="color: white"> Payment Details</span>
                     </a>
                 </li>
                 <li>
-                    <a href="adminPages/RentDetails.html">
+                    <a href="./RentManage.html">
                         <i style="background-color: white" class="bi bi-circle"></i><span style="color: white">Rent Details</span>
                     </a>
                 </li>
@@ -253,13 +253,13 @@
         </li><!-- End View Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="adminPages/CusomerRequest.html" id="myDetailsSection" style="background-color: #003366">
+            <a class="nav-link collapsed" href="./CustomerRequest.html" id="myDetailsSection" style="background-color: #003366">
                 <i class="fa-solid fa-square-poll-horizontal" style="color: #ff8800;"></i>                <span style="color: white">Rent Request</span>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="adminPages/IncomeDetails.html" id="incomeDetails" style="background-color: #003366">
+            <a class="nav-link collapsed" href="./IncomeDetail.html" id="incomeDetails" style="background-color: #003366">
                 <i class="fa-solid fa-chart-simple" style="color: #ff8800;"></i>                <span style="color: white">Income Details</span>
             </a>
         </li>
@@ -352,6 +352,10 @@
 <!-- Template Dashboard Main JS File -->
 <script src="../../assets/js/dashboardMain.js"></script>
 
+<script src="../../Controller/DashBoardController.js"></script>
+<script src="../../Controller/RentController.js"></script>
 
+<script src="../../util/alert.js"></script>
+<script src="../../util/validation.js"></script>
 </body>
 </html>
