--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -178,6 +178,7 @@
     </div>
 </section>
 <!--search car-->
+<!--
 <div id="checkCar" class="position-relative w-75  txt-center justify-content-center d-flex align-items-center  ">
     <div class="row shadow rounded-lg " >
         <div id="searchCar" class="col-4" style="background-color: #1d2951  ">
@@ -224,8 +225,66 @@
 
         </div>
     </div>
+-->
 
-
+<!-- Team Start -->
+<div class="container-fluid py-5">
+    <div class="container py-5">
+        <h1 class="display-1 text-primary text-center">04</h1>
+        <h1 class="display-4 text-uppercase text-center mb-5">Meet Our Team</h1>
+        <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                <div class="position-relative py-4">
+                    <h4 class="text-uppercase">Full Name</h4>
+                    <p class="m-0">Designation</p>
+                    <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                <div class="position-relative py-4">
+                    <h4 class="text-uppercase">Full Name</h4>
+                    <p class="m-0">Designation</p>
+                    <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                <div class="position-relative py-4">
+                    <h4 class="text-uppercase">Full Name</h4>
+                    <p class="m-0">Designation</p>
+                    <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-item">
+                <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                <div class="position-relative py-4">
+                    <h4 class="text-uppercase">Full Name</h4>
+                    <p class="m-0">Designation</p>
+                    <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Team End -->
 
 <!-- ======= Register A Customer ======= -->
 <section class="Register-customer-new  position-relative " style="bottom: 199px;height: 160vh" id="Register-customer-new">
@@ -579,6 +638,137 @@
 
 <script rel="script" src="util/validation.js"></script>
 <script src="util/alert.js"></script>
+<script>
+    var $jq341 = jQuery.noConflict();
+    (function ($jq341) {
+        "use strict";
 
+        // Dropdown on mouse hover
+        $(document).ready(function () {
+            function toggleNavbarMethod() {
+                if ($(window).width() > 992) {
+                    $('.navbar .dropdown').on('mouseover', function () {
+                        $('.dropdown-toggle', this).trigger('click');
+                    }).on('mouseout', function () {
+                        $('.dropdown-toggle', this).trigger('click').blur();
+                    });
+                } else {
+                    $('.navbar .dropdown').off('mouseover').off('mouseout');
+                }
+            }
+            toggleNavbarMethod();
+            $(window).resize(toggleNavbarMethod);
+        });
+
+
+        // Date and time picker
+        $('.date').datetimepicker({
+            format: 'L'
+        });
+        $('.time').datetimepicker({
+            format: 'LT'
+        });
+
+
+        // Back to top button
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 100) {
+                $('.back-to-top').fadeIn('slow');
+            } else {
+                $('.back-to-top').fadeOut('slow');
+            }
+        });
+        $('.back-to-top').click(function () {
+            $('html, body').animate({scrollTop: 0}, 1500, 'easeInOutExpo');
+            return false;
+        });
+
+
+        // Team carousel
+        $(".team-carousel, .related-carousel").owlCarousel({
+            autoplay: true,
+            smartSpeed: 1000,
+            center: true,
+            margin: 30,
+            dots: false,
+            loop: true,
+            nav : true,
+            navText : [
+                '<i class="fa fa-angle-left" aria-hidden="true"></i>',
+                '<i class="fa fa-angle-right" aria-hidden="true"></i>'
+            ],
+            responsive: {
+                0:{
+                    items:1
+                },
+                576:{
+                    items:1
+                },
+                768:{
+                    items:2
+                },
+                992:{
+                    items:3
+                }
+            }
+        });
+
+
+        // Testimonials carousel
+        $(".testimonial-carousel").owlCarousel({
+            autoplay: true,
+            smartSpeed: 1500,
+            margin: 30,
+            dots: true,
+            loop: true,
+            center: true,
+            responsive: {
+                0:{
+                    items:1
+                },
+                576:{
+                    items:1
+                },
+                768:{
+                    items:2
+                },
+                992:{
+                    items:3
+                }
+            }
+        });
+
+
+        // Vendor carousel
+        $('.vendor-carousel').owlCarousel({
+            loop: true,
+            margin: 30,
+            dots: true,
+            center: true,
+            autoplay: true,
+            smartSpeed: 1000,
+            responsive: {
+                0:{
+                    items:2
+                },
+                576:{
+                    items:3
+                },
+                768:{
+                    items:4
+                },
+                992:{
+                    items:5
+                },
+                1200:{
+                    items:6
+                }
+            }
+        });
+
+    })(jQuery);
+
+
+</script>
 </body>
 </html>
