--- a/Front_End/pages/driverDashBoard.html
+++ b/Front_End/pages/driverDashBoard.html
@@ -333,7 +333,10 @@
 
 <!-- Template Dashboard Main JS File -->
 <script src="../assets/js/dashboardMain.js"></script>
-
+<script src="../Controller/DashBoardController.js"></script>
+<script src="../Controller/driverDashboardController.js"></script>
+<script src="../util/alert.js"></script>
+<script src="../util/validation.js"></script>
 
 
 <script>
